# erasure-codes

./: .gitignore  CMakeLists.txt  README.md  erasure-codes.sln
erasure-codes/: CMakeLists.txt  avx2_impl.cpp  avx512_impl.cpp  base_impl.cpp  base_impl2.cpp  encode_basic.cpp  encoder_dispatcher.cpp  encoder_interface.cpp  encoder_interface.h  encoder_internal.h  erasure-codes.vcxproj  erasure-codes.vcxproj.filters  fast_impl.cpp  galois.h  liberasure.cpp  liberasure.h  lohi_table.cpp  main.cpp  mat_mul_base.cpp  matrix.cpp  matrix.h  rs_encoder.cpp  rs_encoder.h  rs_encoder_internal.h  rsparams.h  sse2_impl.cpp  stream_api.h  stream_encode.cpp  stream_recover.cpp  symbol.cpp  symbol.h
erasure-codes-old/: base_impl.cpp  erasure-codes.vcxproj  erasure-codes.vcxproj.filters  interface.h  main.cpp  matrix.cpp  rsparams.h
erasure-codes/encode/: encode_adv.cpp  encode_avx2.cpp  encode_basic.cpp  encode_sse.cpp
erasure-test/: CMakeLists.txt  avx2-odd-size.cpp  compare-ref-adv-impl.cpp  compare-ref-avx2-impl.cpp  compare-ref-sse-impl.cpp  fuzz-sizes.cpp  large-dataset.cpp  matrix-tests.cpp  recover-template.hpp  recover-test.cpp  roundtrip-test.cpp
erasure-tests/: CMakeLists.txt  avx2-odd-size.cpp  compare-ref-adv-impl.cpp  compare-ref-avx2-impl.cpp  compare-ref-sse-impl.cpp  large-dataset.cpp  large-n-and-k-test.cpp  recover-template.hpp  recover-test.cpp  roundtrip-test.cpp
galois/: CMakeLists.txt  encoder.h  galois.vcxproj  galois.vcxproj.filters  main.cpp  matrix.cpp  matrix.h  ops.cpp  ops.h
galois-test/: CMakeLists.txt  common.h  encode-test.cpp  main.cpp  matrix-test.cpp
gf-arith-tests/: CMakeLists.txt  catch-wrapper.hpp  encode-tests.cpp  matrix-multiply-test.cpp  matrix-tests.cpp  symbol-tests.cpp
gf-arithmetic/: CMakeLists.txt  New Generic file  detectcpu.h  encode.h  encode_adv.cpp  encode_avx2.cpp  encode_sse.cpp  log_tables.cpp  lohi_table.cpp  matrix-inverse.cpp  matrix.cpp  matrix.h  symbol.cpp
gf-arithmetic/backends/: CMakeLists.txt  encode_avx2.cpp
log-table-generator/: main.cpp
lohi-generator/: CMakeLists.txt  main.cpp
simple/: CMakeLists.txt  main.cpp
